--- a/pom.xml
+++ b/pom.xml
@@ -46,19 +46,25 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.9.1</version>
-		</dependency>
+            <version>2.9.1</version>
+			</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.9.1</version>
-		</dependency>
+            <version>2.9.1</version>
+			</dependency>
 
 		<dependency>
 			<groupId>gov.nasa.gsfc.heasarc</groupId>
 			<artifactId>nom-tam-fits</artifactId>
 			<version>1.15.2</version>
 		</dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>     
 
 	</dependencies>
 
