--- a/pom.xml
+++ b/pom.xml
@@ -46,25 +46,32 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-            <version>2.9.1</version>
-			</dependency>
+			<version>2.9.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-            <version>2.9.1</version>
-			</dependency>
+			<version>2.9.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>gov.nasa.gsfc.heasarc</groupId>
 			<artifactId>nom-tam-fits</artifactId>
 			<version>1.15.2</version>
 		</dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
+		</dependency>
+
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>3.6.1</version>
-        </dependency>     
+            <groupId>io.github.malapert</groupId>
+            <artifactId>JWcs</artifactId>
+            <version>1.2.0</version>
+        </dependency>
 
 	</dependencies>
 
@@ -72,6 +79,23 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<distributionManagement>
+		<!-- Pour la publication des releases -->
+		<!-- <repository> <id>nexus-releases</id> <name>releases</name> <url>http://192.168.20.7:9500/nexus/content/repositories/releases/</url> 
+			</repository> -->
+		<repository>
+			<id>internal.repo</id>
+			<name>Temporary Staging Repository</name>
+			<url>file://${project.build.directory}/mvn-repo</url>
+		</repository>
+
+		<!-- Pour la publication des snapshots -->
+		<snapshotRepository>
+			<id>internal.repo-snapshots</id>
+			<name>snapshots</name>
+			<url>file://${project.build.directory}/mvn-repo/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
