--- a/pom.xml
+++ b/pom.xml
@@ -60,18 +60,20 @@
 			<version>1.15.2</version>
 		</dependency>
 
+        <dependency>
+			<groupId>edu.ucar</groupId>
+			<artifactId>netcdfAll</artifactId>
+			<version>4.6.9</version>
+        </dependency>
+		
+		<!-- <dependency> <groupId>edu.ucar</groupId> <artifactId>cdm</artifactId> 
+			<version>${netcdfJavaVersion}</version> <scope>compile</scope> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
-
-        <dependency>
-            <groupId>io.github.malapert</groupId>
-            <artifactId>JWcs</artifactId>
-            <version>1.2.0</version>
-        </dependency>
 
 	</dependencies>
 
@@ -112,6 +114,7 @@
 			<url>https://repo.spring.io/libs-release</url>
 		</repository>
 	</repositories>
+	
 	<pluginRepositories>
 		<pluginRepository>
 			<id>spring-releases</id>
