Update rest Services and add log file and bouchon object localisation and object type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+spring.application.name=cubeExplorer
 
 management.port=9090
 management.address=127.0.0.1,localhost,172.25.140.8
 management.security.enabled=false
 
-server.port=8080
+server.port=8081
+
+logging.config=classpath:conf/logback-spring.xml
+logging.level = INFO
+#logging.file = cubeExplorer.log
+#logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n  
