--- a/src/main/resources/conf/cubeExplorer.properties
+++ b/src/main/resources/conf/cubeExplorer.properties
@@ -1,3 +1,11 @@
 lang=en
 workspace=C:/temp/cubeExplorer/files_test
+workspace_cube=D:\\temp\\cubeExplorer\\
+username=admin
+password=admin
+username_public=public
+password_public=public
+data_roles_admin=all
+data_roles_public=public
+
 
