--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>fr.cnes</groupId>
 	<artifactId>cubeExplorer</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -64,7 +64,7 @@
 			<artifactId>netcdfAll</artifactId>
 			<version>4.6.9</version>
 		</dependency>
-
+		
 		<!-- <dependency> <groupId>edu.ucar</groupId> <artifactId>cdm</artifactId> 
 			<version>${netcdfJavaVersion}</version> <scope>compile</scope> </dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
@@ -123,6 +123,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<fork>true</fork>
+					<executable>C:\Program Files\Java\jdk1.8.0_191\bin\javac</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
