--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>fr.cnes</groupId>
 	<artifactId>cubeExplorer</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -131,7 +131,6 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<fork>true</fork>
-					<executable>C:\Program Files\Java\jdk1.8.0_191\bin\javac</executable>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -141,6 +140,10 @@
 		<repository>
 			<id>spring-releases</id>
 			<url>https://repo.spring.io/libs-release</url>
+		</repository>
+		<repository>
+			<id>unidata-all</id>
+			<url>https://artifacts.unidata.ucar.edu/repository/unidata-all/</url>
 		</repository>
 	</repositories>
 
