config NetCDF dim names
Added config for NetCDF dimention names.  Now cubes work with other names than lon and lat: longitude and latitude work as well...

--- a/src/main/resources/conf/cubeExplorer.properties
+++ b/src/main/resources/conf/cubeExplorer.properties
@@ -7,5 +7,8 @@ username_public=public
 password_public=public
 data_roles_admin=all
 data_roles_public=public
-
+# NetCDF cube dimension names
+dimX=lon|long|longitude|longitudes
+dimY=lat|latitude|latitudes
+dimZ=level|lvl|wavelength|wavelengths|levels
 
