--- a/cubeExplorer.properties
+++ b/cubeExplorer.properties
@@ -7,6 +7,7 @@ username_public=public
 password_public=public
 data_roles_admin=all
 data_roles_public=public
+no_credential_needed=true
 # NetCDF cube dimension names
 dimX=lon|long|longitude|longitudes
 dimY=lat|latitude|latitudes
